added: first vesion for Legal Case api docs
