# app/Models/LegalCase/LegalCase.php
@@ -7,6 +7,7 @@ use App\Models\Evidence\Evidence;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Database\Eloquent\SoftDeletes;
 use Prettus\Repository\Contracts\Transformable;
 use Prettus\Repository\Traits\TransformableTrait;
 
@@ -17,7 +18,7 @@ use Prettus\Repository\Traits\TransformableTrait;
  */
 class LegalCase extends Model implements Transformable
 {
-    use TransformableTrait, HasFactory;
+    use TransformableTrait, HasFactory, SoftDeletes;
 
     /**
      * The attributes that are mass assignable.
@@ -28,13 +29,13 @@ class LegalCase extends Model implements Transformable
         'user_id',
         'case_matter',
         'case_type',
-        'complaint_status',
         'pending_protocol',
         'case_description',
         'case_requests',
-        'plaintiff_id',
         'court',
-        'fields_of_law'
+        'fields_of_law',
+        'complaint',
+        'status'
     ];
 
     /**
@@ -47,12 +48,22 @@ class LegalCase extends Model implements Transformable
         return $this->hasMany(Evidence::class, 'legal_case_id', 'id');
     }
 
+    /**
+     * Get all of the plaintiffs for the LegalCase
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasMany
+     */
     public function plaintiff()
     {
         return $this->hasMany(LegalCaseParticipant::class, 'legal_case_id')
             ->where('participant_type_id', LegalCaseParticipantTypeEnum::PLAINTIFF_ID); // 1 pode ser o ID do desafiante na sua tabela de tipos de participantes
     }
 
+    /**
+     * Get all of the defendants for the LegalCase
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasMany
+     */
     public function defendant()
     {
         return $this->hasMany(LegalCaseParticipant::class, 'legal_case_id')
