# docs/Default/Schemas/LegalCase/LegalCaseResource.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace Docs\Default\Schemas\LegalCase;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema()
+ */
+class LegalCaseResource
+{
+    /**
+     * @OA\Property()
+     */
+    public LegalCase $data;
+
+    /**
+     * @OA\Property(example="integer")
+     */
+    public int $statusCode;
+}
